fix cards rendering on small screens

--- a/static/skywarehouse/css/style.less
+++ b/static/skywarehouse/css/style.less
@@ -52,7 +52,8 @@ footer {
 
     .card {
         display: inline-block;
-        overflow: visible;
+        overflow: hidden;
+        max-width: 100%;
     }
 }
 
